--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //noinspection GradleCompatible
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.+'
-    compile 'com.twitter.sdk.android:twitter:3.1.1'
+    compile 'com.twitter.sdk.android:twitter-core:3.1.1'
+    compile 'com.twitter.sdk.android:tweet-ui:3.1.1'
+    compile 'com.twitter.sdk.android:tweet-composer:3.1.1'
     compile 'com.twitter.sdk.android:twitter-mopub:3.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jakewharton:butterknife:8.4.0'
@@ -41,6 +44,8 @@ dependencies {
     compile 'com.kevadiyakrunalk:rxpermissions:1.0@aar'
     compile 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0'
     compile 'com.github.ratty3697:android-smart-animation-library:1.6'
+    compile 'com.amitshekhar.android:android-networking:1.0.1'
+    compile 'com.android.volley:volley:1.0.0'
 
 
     testCompile 'junit:junit:4.12'
